--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -73,7 +73,7 @@
                     android:textColor="@android:color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="首页数据源"/>
+                    android:text="首页数据"/>
                 <Space
                     android:layout_width="0.0dip"
                     android:layout_height="wrap_content"
@@ -184,11 +184,11 @@
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:id="@+id/llHomeRecStyle"
-						android:visibility="gone"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
                         android:focusable="true"
+                        android:visibility="gone"
                         android:layout_width="@dimen/vs_0"
                         android:layout_height="fill_parent"
                         android:layout_marginLeft="@dimen/vs_5"
@@ -217,7 +217,7 @@
                             android:layout_marginLeft="@dimen/vs_10"
                             android:text=">"/>
                     </LinearLayout>
-                   <LinearLayout
+                    <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:id="@+id/llHomeLive"
@@ -234,7 +234,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="启动时进直播"/>
+                            android:text="直进直播"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -358,6 +358,7 @@
                         android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+						android:letterSpacing="0.4"
                         android:text="播放器"/>
                     <Space
                         android:layout_width="0.0dip"
@@ -394,7 +395,7 @@
                         android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="IJK解码方式"/>
+                        android:text="IJK 解码"/>
                     <Space
                         android:layout_width="0.0dip"
                         android:layout_height="wrap_content"
@@ -459,7 +460,7 @@
                 <LinearLayout
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:id="@+id/llDns"
+                    android:id="@+id/llIjkCachePlay"
                     android:background="@drawable/shape_setting_model_focus"
                     android:paddingLeft="@dimen/vs_20"
                     android:paddingRight="@dimen/vs_20"
@@ -473,7 +474,7 @@
                         android:textColor="@android:color/white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="安全DNS"/>
+                        android:text="IJK 缓存"/>
                     <Space
                         android:layout_width="0.0dip"
                         android:layout_height="wrap_content"
@@ -481,9 +482,10 @@
                     <TextView
                         android:textSize="@dimen/ts_24"
                         android:textColor="@android:color/white"
-                        android:id="@+id/tvDns"
+                        android:id="@+id/tvIjkCachePlay"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:text="关闭"/>
                     <TextView
                         android:textSize="@dimen/ts_30"
                         android:textColor="@android:color/white"
@@ -500,41 +502,85 @@
                 android:layout_height="@dimen/vs_60"
                 android:layout_marginBottom="@dimen/vs_10">
                 <LinearLayout
-                    android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:id="@+id/llParseWebVew"
-                    android:background="@drawable/shape_setting_model_focus"
-                    android:paddingLeft="@dimen/vs_20"
-                    android:paddingRight="@dimen/vs_20"
-                    android:focusable="true"
+                    android:focusable="false"
                     android:layout_width="@dimen/vs_0"
                     android:layout_height="fill_parent"
                     android:layout_marginRight="@dimen/vs_5"
                     android:layout_weight="1.0">
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="嗅探Webview"/>
-                    <Space
-                        android:layout_width="0.0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.0"/>
-                    <TextView
-                        android:textSize="@dimen/ts_24"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvParseWebView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="系统自带"/>
-                    <TextView
-                        android:textSize="@dimen/ts_30"
-                        android:textColor="@android:color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/vs_10"
-                        android:text=">"/>
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llParseWebVew"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginRight="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="嗅探方式"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvParseWebView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="系统自带"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:id="@+id/llDns"
+                        android:background="@drawable/shape_setting_model_focus"
+                        android:paddingLeft="@dimen/vs_20"
+                        android:paddingRight="@dimen/vs_20"
+                        android:focusable="true"
+                        android:layout_width="@dimen/vs_0"
+                        android:layout_height="fill_parent"
+                        android:layout_marginLeft="@dimen/vs_5"
+                        android:layout_weight="1.0">
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="安全DNS"/>
+                        <Space
+                            android:layout_width="0.0dip"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1.0"/>
+                        <TextView
+                            android:textSize="@dimen/ts_24"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/tvDns"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:textSize="@dimen/ts_30"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/vs_10"
+                            android:text=">"/>
+                    </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
@@ -560,7 +606,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="搜索附近聚汇影视"/>
+                            android:text="附近聚汇"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -788,7 +834,7 @@
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:id="@+id/llIjkCachePlay"
+                        android:id="@+id/llClearCache"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
@@ -802,18 +848,11 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="IJK缓存"/>
+                            android:text="清空缓存"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
                             android:layout_weight="1.0"/>
-                        <TextView
-                            android:textSize="@dimen/ts_24"
-                            android:textColor="@android:color/white"
-                            android:id="@+id/tvIjkCachePlay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="关闭"/>
                         <TextView
                             android:textSize="@dimen/ts_30"
                             android:textColor="@android:color/white"
@@ -825,7 +864,7 @@
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:id="@+id/llClearCache"
+                        android:id="@+id/llReset"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
@@ -839,7 +878,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="清空缓存"/>
+                            android:text="应用重置"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -878,7 +917,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="数据备份还原"/>
+                            android:text="备份还原"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -908,7 +947,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="关于"/>
+                            android:text="关于我们"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
