--- a/app/src/main/res/drawable/button_detail_desc.xml
+++ b/app/src/main/res/drawable/button_detail_desc.xml
@@ -21,7 +21,7 @@
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
             <corners android:radius="@dimen/vs_20"/>
-            <solid android:color="@color/color_3D3D3D"/>
+            <solid android:color="@color/color_6C3D3D3D"/>
         </shape>
     </item>
 </selector>
