--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -8,20 +8,18 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:id="@+id/root"
-        android:paddingLeft="@dimen/vs_10"
-        android:paddingRight="@dimen/vs_10"
         android:background="@drawable/shape_dialog_bg_main"
+        android:padding="@dimen/vs_30"
         android:layout_width="fill_parent"
-        android:layout_height="494.0mm">
+        android:layout_height="495.0mm">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vs_10"
-            android:layout_marginBottom="@dimen/vs_5"
+            android:layout_marginBottom="@dimen/vs_10"
             android:weightSum="2.0">
             <TextView
-                android:textSize="@dimen/ts_26"
+                android:textSize="@dimen/ts_24"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -35,7 +33,7 @@
                 android:text="全选"
                 android:layout_weight="1.0"/>
             <TextView
-                android:textSize="@dimen/ts_26"
+                android:textSize="@dimen/ts_24"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -53,9 +51,9 @@
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
             android:id="@+id/mGridView"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="7.5mm"/>
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"/>
     </LinearLayout>
 </FrameLayout>
