--- a/app/src/main/res/layout/dialog_live_password.xml
+++ b/app/src/main/res/layout/dialog_live_password.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="@dimen/vs_400"
-        android:layout_height="@dimen/vs_150"
         android:layout_gravity="center"
-        android:background="@drawable/shape_dialog_bg_main"
         android:orientation="horizontal"
-        android:padding="@dimen/vs_30">
-
+        android:background="@drawable/shape_dialog_bg_main"
+        android:padding="@dimen/vs_30"
+        android:layout_width="@dimen/vs_480"
+        android:layout_height="wrap_content">
         <EditText
-            android:id="@+id/input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textSize="@dimen/ts_26"
+            android:textColor="@color/color_CC000000"
+            android:textColorHint="@color/color_6C3D3D3D"
             android:layout_gravity="center"
-            android:layout_weight="1"
+            android:id="@+id/input"
             android:background="@drawable/input_dialog_api_input"
-            android:hint="请输入密码"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:paddingLeft="2mm"
+            android:paddingLeft="2.0mm"
             android:paddingTop="@dimen/vs_10"
             android:paddingRight="@dimen/vs_2"
             android:paddingBottom="@dimen/vs_10"
-            android:textColor="@color/color_CC000000"
-            android:textColorHint="@color/color_6C3D3D3D"
-            android:textSize="@dimen/ts_26" />
-
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入密码"
+            android:maxLines="1"
+            android:layout_weight="1.0"
+            android:inputType="textPassword"/>
         <TextView
+            android:textSize="@dimen/ts_22"
+            android:textColor="@color/color_FFFFFF"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:id="@+id/inputSubmit"
+            android:background="@drawable/button_dialog_main"
+            android:padding="@dimen/vs_10"
+            android:focusable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginLeft="@dimen/vs_5"
-            android:background="@drawable/button_dialog_main"
-            android:focusable="true"
-            android:gravity="center"
-            android:padding="@dimen/vs_10"
-            android:text="确定"
-            android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/ts_22" />
-
+            android:text="确定"/>
     </LinearLayout>
 </FrameLayout>
