--- a/app/src/main/res/layout/dialog_subtitle.xml
+++ b/app/src/main/res/layout/dialog_subtitle.xml
@@ -17,41 +17,47 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:textSize="@dimen/ts_20"
+                android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/selectInternal"
                 android:background="@drawable/button_dialog_main"
-                android:padding="@dimen/vs_10"
+                android:paddingTop="@dimen/vs_10"
+                android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
                 android:visibility="gone"
-                android:layout_width="@dimen/vs_480"
+                android:layout_width="fill_parent"
+                android:maxLines="1"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/vs_10"
                 android:text="选择内置字幕"/>
             <TextView
-                android:textSize="@dimen/ts_20"
+                android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/selectLocal"
                 android:background="@drawable/button_dialog_main"
-                android:padding="@dimen/vs_10"
+                android:paddingTop="@dimen/vs_10"
+                android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
-                android:layout_width="@dimen/vs_480"
+                android:layout_width="fill_parent"
+                android:maxLines="1"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/vs_10"
                 android:text="选择本地字幕"/>
             <TextView
-                android:textSize="@dimen/ts_20"
+                android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/selectRemote"
                 android:background="@drawable/button_dialog_main"
-                android:padding="@dimen/vs_10"
+                android:paddingTop="@dimen/vs_10"
+                android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
-                android:layout_width="@dimen/vs_480"
+                android:layout_width="fill_parent"
+                android:maxLines="1"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10"
                 android:text="在线搜索字幕"/>
@@ -59,19 +65,21 @@
                 android:gravity="center_vertical"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:layout_width="@dimen/vs_480"
-                android:layout_height="@dimen/vs_60"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10">
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleSizeMinus"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:maxLines="1"
+                    android:layout_width="@dimen/vs_170"
                     android:layout_height="wrap_content"
                     android:text="字号减小"/>
                 <TextView
@@ -81,21 +89,24 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleSizeText"
-                    android:layout_width="@dimen/vs_120"
-                    android:layout_height="@dimen/vs_60"
+                    android:layout_weight="1.0"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/vs_40"
                     android:layout_marginRight="@dimen/vs_40"
                     android:text="16"/>
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleSizePlus"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:maxLines="1"
+                    android:layout_width="@dimen/vs_170"
                     android:layout_height="wrap_content"
                     android:text="字号增大"/>
             </LinearLayout>
@@ -103,21 +114,23 @@
                 android:gravity="center_vertical"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:layout_width="@dimen/vs_480"
-                android:layout_height="@dimen/vs_60"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10">
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleStyleOne"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:layout_width="@dimen/vs_170"
                     android:layout_height="wrap_content"
                     android:text="字幕样式一"
+                    android:maxLines="1"
                     android:shadowColor="@color/color_CC000000"
                     android:shadowDx="1.0"
                     android:shadowDy="1.0"
@@ -125,24 +138,28 @@
                 <TextView
                     android:textSize="@dimen/ts_40"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:layout_weight="1.0"
                     android:layout_gravity="center"
-                    android:layout_width="@dimen/vs_120"
-                    android:layout_height="@dimen/vs_60"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/vs_40"
                     android:layout_marginRight="@dimen/vs_40"
                     android:text=""/>
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textStyle="bold"
                     android:textColor="@color/color_1890FF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleStyleTwo"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:layout_width="@dimen/vs_170"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="字幕样式二"
                     android:shadowColor="@color/color_CC000000"
                     android:shadowDx="1.0"
@@ -153,8 +170,8 @@
                 android:gravity="center_vertical"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:layout_width="@dimen/vs_480"
-                android:layout_height="@dimen/vs_40"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10">
                 <TextView
                     android:textSize="@dimen/ts_30"
@@ -162,26 +179,29 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="字幕延时仅对外挂字幕有效"/>
             </LinearLayout>
             <LinearLayout
                 android:gravity="center_vertical"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:layout_width="@dimen/vs_480"
-                android:layout_height="@dimen/vs_60"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/vs_10">
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleTimeMinus"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:maxLines="1"
+                    android:layout_width="@dimen/vs_170"
                     android:layout_height="wrap_content"
                     android:text="字幕提前"/>
                 <TextView
@@ -191,21 +211,25 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleTimeText"
-                    android:layout_width="@dimen/vs_120"
-                    android:layout_height="@dimen/vs_60"
+                    android:maxLines="1"
+                    android:layout_weight="1.0"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/vs_40"
                     android:layout_marginRight="@dimen/vs_40"
                     android:text="0"/>
                 <TextView
-                    android:textSize="@dimen/ts_20"
+                    android:textSize="@dimen/ts_22"
                     android:textColor="@color/color_FFFFFF"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/subtitleTimePlus"
                     android:background="@drawable/button_dialog_main"
-                    android:padding="@dimen/vs_10"
+                    android:paddingTop="@dimen/vs_10"
+                    android:paddingBottom="@dimen/vs_10"
                     android:focusable="true"
-                    android:layout_width="@dimen/vs_140"
+                    android:layout_width="@dimen/vs_170"
+                    android:maxLines="1"
                     android:layout_height="wrap_content"
                     android:text="字幕推迟"/>
             </LinearLayout>
