--- a/app/src/main/res/layout/dialog_xwalk.xml
+++ b/app/src/main/res/layout/dialog_xwalk.xml
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="@dimen/vs_440"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/shape_dialog_bg_main"
         android:orientation="vertical"
-        android:padding="@dimen/vs_30">
-
+        android:background="@drawable/shape_dialog_bg_main"
+        android:padding="@dimen/vs_30"
+        android:layout_width="@dimen/vs_480"
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/downXWalkArch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:focusable="false"
-            android:gravity="center"
-            android:lineSpacingExtra="@dimen/ts_50"
-            android:lineSpacingMultiplier="0"
-            android:text="下载XWalkView运行组件"
+            android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:textSize="@dimen/ts_24" />
-
-        <TextView
-            android:id="@+id/downXWalk"
-            android:layout_width="@dimen/vs_300"
-            android:layout_height="@dimen/vs_40"
+            android:gravity="center"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/vs_30"
+            android:id="@+id/downXWalkArch"
+            android:focusable="false"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="下载XWalkView运行组件"
+            android:lineSpacingExtra="@dimen/ts_50"
+            android:lineSpacingMultiplier="0.0"/>
+        <TextView
+            android:textSize="@dimen/ts_22"
+            android:textColor="@color/color_FFFFFF"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/downXWalk"
             android:background="@drawable/button_dialog_main"
             android:focusable="true"
-            android:gravity="center"
-            android:text="下载"
-            android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/ts_26" />
-
+            android:padding="@dimen/vs_10"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vs_30"
+            android:text="下载"/>
     </LinearLayout>
 </FrameLayout>
