--- a/app/src/main/res/layout/item_dialog_api_history.xml
+++ b/app/src/main/res/layout/item_dialog_api_history.xml
@@ -1,40 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
+        android:textSize="@dimen/ts_22"
+        android:textColor="@color/color_FFFFFF"
+        android:ellipsize="middle"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:id="@+id/tvName"
+        android:background="@drawable/button_dialog_main"
+        android:padding="@dimen/vs_10"
+        android:focusable="true"
+        android:clickable="true"
         android:layout_width="@dimen/vs_0"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:background="@drawable/button_dialog_main"
-        android:clickable="true"
-        android:ellipsize="middle"
-        android:focusable="true"
-        android:gravity="center"
-        android:padding="@dimen/vs_10"
+        android:text="\@{name}"
         android:singleLine="true"
-        android:text="@{name}"
-        android:textColor="@color/color_FFFFFF"
-        android:textSize="@dimen/ts_26"
-        tools:text="11111111111111" />
-
+        android:layout_weight="1.0"/>
     <ImageView
         android:id="@+id/tvDel"
-        android:layout_width="@dimen/vs_50"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/vs_5"
-        android:layout_marginLeft="@dimen/vs_5"
         android:background="@drawable/button_dialog_main"
-        android:clickable="true"
-        android:focusable="true"
         android:padding="@dimen/vs_10"
-        android:src="@drawable/icon_delete" />
-
+        android:focusable="true"
+        android:clickable="true"
+        android:layout_width="@dimen/vs_50"
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="@dimen/vs_5"
+        android:src="@drawable/icon_delete"
+        android:layout_marginStart="@dimen/vs_5"/>
 </LinearLayout>
-
